doc: adding bindletools-urldesc.1 man pages

--- a/Makefile.am
+++ b/Makefile.am
@@ -83,6 +83,7 @@ man_MANS				= doc/mans/bindletools.1 \
 					  doc/mans/bindletools-base64.1 \
 					  doc/mans/bindletools-crockfordbase32.1 \
 					  doc/mans/bindletools-pctenc.1 \
+					  doc/mans/bindletools-urldesc.1 \
 					  doc/mans/bindle_array.3 \
 					  doc/mans/bindle_basename_r.3 \
 					  doc/mans/bindle_bindex.3 \
@@ -142,6 +143,7 @@ EXTRA_DIST				= $(doc_DATA) \
 					  doc/mans/bindletools-base64.1.in \
 					  doc/mans/bindletools-crockfordbase32.1.in \
 					  doc/mans/bindletools-pctenc.1.in \
+					  doc/mans/bindletools-urldesc.1.in \
 					  doc/mans/bindle_array.3.in \
 					  doc/mans/bindle_basename_r.3.in \
 					  doc/mans/bindle_bindex.3.in \
@@ -301,6 +303,9 @@ doc/mans/bindletools-crockfordbase32.1: Makefile $(srcdir)/doc/mans/bindletools-
 	@$(do_subst_dt)
 
 doc/mans/bindletools-pctenc.1: Makefile $(srcdir)/doc/mans/bindletools-pctenc.1.in
+	@$(do_subst_dt)
+
+doc/mans/bindletools-urldesc.1: Makefile $(srcdir)/doc/mans/bindletools-urldesc.1.in
 	@$(do_subst_dt)
 
 doc/mans/bindle_array.3: Makefile $(srcdir)/doc/mans/bindle_array.3.in
