--- a/build-aux/makefile-bindle.am
+++ b/build-aux/makefile-bindle.am
@@ -42,8 +42,8 @@ BUILT_SOURCES				?=
 
 
 EXTRA_DIST				?=
-EXTRA_DIST				+= $(bindletools_srcdir)/COPYING
-EXTRA_DIST				+= $(bindletools_srcdir)/README
+EXTRA_DIST				+= $(bindletools_srcdir)/COPYING.md
+EXTRA_DIST				+= $(bindletools_srcdir)/README.md
 EXTRA_DIST				+= $(bindletools_srcdir)/build-aux/makefile-bindle.am
 
 
