libbindle: adding initial berval functions

--- a/build-aux/makefile-libbindle.am
+++ b/build-aux/makefile-libbindle.am
@@ -125,6 +125,8 @@ lib_libbindle_a_SOURCES			= $(srcdir)/$(bindletools_srcdir)/include/bindle.h \
 					  $(srcdir)/$(bindletools_srcdir)/lib/libbindle/libbindle.h \
 					  $(srcdir)/$(bindletools_srcdir)/lib/libbindle/larray.c \
 					  $(srcdir)/$(bindletools_srcdir)/lib/libbindle/larray.h \
+					  $(srcdir)/$(bindletools_srcdir)/lib/libbindle/lberval.c \
+					  $(srcdir)/$(bindletools_srcdir)/lib/libbindle/lberval.h \
 					  $(srcdir)/$(bindletools_srcdir)/lib/libbindle/ldebug.c \
 					  $(srcdir)/$(bindletools_srcdir)/lib/libbindle/ldebug.h \
 					  $(srcdir)/$(bindletools_srcdir)/lib/libbindle/lencoding.c \
