--- a/doc/mans/bindle_berval.3.in
+++ b/doc/mans/bindle_berval.3.in
@@ -110,6 +110,7 @@ less than, equal to, or greater than \fBbv2\fR.
 
 .SH SEE ALSO
 .BR bindletools (3),
+.BR bindle_bvarray (3)
 
 .SH AUTHOR
 David M. Syzdek <david@syzdek.net>
