--- a/doc/mans/bindle_berval.3.in
+++ b/doc/mans/bindle_berval.3.in
@@ -30,7 +30,7 @@
 .\"
 .TH "BINDLE_URLDESC" "3" "@RELEASE_MONTH@" "@PACKAGE_NAME@" "Library Functions Manual"
 .SH NAME
-bindle_berval_init, bindle_berval_free, bindle_berval_dup, bindle_berval_cmp, bindle_berval_bv2str, bindle_berval_str2bv - Bindle Binary Tools URL parsing routines
+bindle_berval_init, bindle_berval_free, bindle_berval_dup, bindle_berval_cmp, bindle_berval_bv2str, bindle_berval_str2bv - Bindle Binary Tools BER management routines
 
 .SH LIBRARY
 Bindle Binaries Tools (libbindle, -lbindle)
